# propan

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  hal.py  hal_brain.py  hal_dashboard.py  ouroboros.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  INTERFACE.md
propan/: __init__.py  __main__.py  cli.py  hal.py  hal_brain.py  hal_dashboard.py  logging_utils.py  ouroboros.py  settings.py
propan/services/: __init__.py  commentary.py  profit.py  thought_store.py  tts.py
propan/web/: __init__.py  app.py  routes_api.py  routes_ui.py
tests/: test_cli.py  test_settings.py  test_web.py
