[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propan"
version = "0.1.0"
description = "Experimental HAL/Ouroboros playground"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "propan"}]

dependencies = [
  "edge-tts>=6.1.10",
  "flask>=3.0.0",
  "groq>=0.9.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.6.0",
  "pytest>=7.4.0",
  "ruff>=0.6.0",
]

[project.scripts]
propan = "propan.cli:app"

[tool.setuptools]
packages = ["propan", "propan.services", "propan.web"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "BLE"]

[tool.ruff.format]
quote-style = "double"
